[gd_scene load_steps=9 format=3 uid="uid://81umrgsn3ha2"]

[ext_resource type="Script" uid="uid://ck466gyer3ae7" path="res://scripts/bow.gd" id="1_prjx1"]
[ext_resource type="Texture2D" uid="uid://nbk2xcowap1b" path="res://assets/sprites/Weapons_sheet.png" id="1_vt0lb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hwmam"]
atlas = ExtResource("1_vt0lb")
region = Rect2(0, 352, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wefea"]
atlas = ExtResource("1_vt0lb")
region = Rect2(16, 352, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb5wq"]
atlas = ExtResource("1_vt0lb")
region = Rect2(64, 336, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqxus"]
atlas = ExtResource("1_vt0lb")
region = Rect2(48, 320, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xyy1d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwmam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wefea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb5wq")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqxus")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vt0lb"]
size = Vector2(16, 22)

[node name="Bow" type="Node2D"]
z_index = 3
script = ExtResource("1_prjx1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 0)
rotation = 0.785398
sprite_frames = SubResource("SpriteFrames_xyy1d")
animation = &"attack"

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="pickup_collider" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_vt0lb")

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_pickup_area_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
